Address reflection issues due to module path when maven tries to load codeflowers