@@ -131,6 +131,7 @@
                     <archive>
                         <manifestEntries>
                             <Add-Opens>cactus.maven.plugin/*=ALL-UNNAMED</Add-Opens>
+                            <Add-Opens>com.google.guice/*=ALL-UNNAMED</Add-Opens>
                             <Add-Exports>cactus.maven.plugin/*=ALL-UNNAMED</Add-Exports>
                             <Add-Exports>cactus.maven.plugin/*=com.google.guice</Add-Exports>
                         </manifestEntries>
